examples/datalog/14_aggregations/69_sum_grouped.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sum_grp
Knowledge graph 'test_sum_grp' created.
Switched to knowledge graph: test_sum_grp
> .kg use test_sum_grp
Switched to knowledge graph: test_sum_grp
> +transactions[(1, "Alice", 100), (2, "Bob", 200), (3, "Alice", 150), (4, "Bob", 50), (5, "Carol", 300)].
Inserted 5 fact(s) into 'transactions'.
> +total_by_person(Person, <SUM:Amount>) :- transactions(_, Person, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
